--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-swipeable": "^5.5.1",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
