--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-swipeable": "^5.5.1",
+    "react-swipeable-views": "^0.13.9",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
