--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "npm-run-all": "^4.1.5",
+    "promise-mysql": "^4.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-swipeable": "^5.5.1",
-    "react-swipeable-views": "^0.13.9",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
-    "start": "PORT=80 react-scripts start",
+    "start": "npm-run-all --parallel start:**",
+    "start:client": "PORT=80 react-scripts start",
+    "start:server": "node ./server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
